# pred_chomage

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-deploy.yml
src/: MLOps.md  api.py  model.py
src/.ipynb_checkpoints/: test_persistence-checkpoint.ipynb
src/notebooks/exploratory/.ipynb_checkpoints/: test if in env-checkpoint.ipynb
tests/: test_pred_chomage.py
