[tool.poetry]
name = "pred_chomage"
version = "0.1.0"
description = ""
authors = ["Michal Gala <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
scikit-learn = "^1.1.1"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
numpy = "^1.23.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
